--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
 	<title>Sorting Algorithms</title>
 </head>
 <body>
-<center><canvas id="myCanvas" width="600px" height="600px" style="border:1px solid #d3d3d3;">
-Your browser does not support the HTML5 canvas tag.</canvas></center>
-<script type="text/javascript" src="rectangles.js"></script>
+  <center>
+  <div id="sliders">
+    <p>Number of rectangles:</p>
+    <input type="range" min="5" max="30" value="5" id="rectangleSlider">
+    <p>Sort speed:</p>
+    <input type="range" min="1" max="5" value="2" id="speedSlider">
+  </div>
+  
+  	<canvas id="myCanvas" width="600px" height="600px" style="border:1px solid #d3d3d3;">
+    Your browser does not support the HTML5 canvas tag.</canvas>
+  </center>
+
+  <script type="text/javascript" src="rectangles.js"></script>
 
 </body>
 </html>
