speed slider implemented

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	    <p>Number of rectangles:</p>
 	    <input type="range" min="5" max="30" value="5" id="rectangleSlider" onchange="updateSlider(this.value)">
 	    <p>Sort speed:</p>
-	    <input type="range" min="1" max="5" value="2" id="speedSlider">
+	    <input type="range" min="0.5" max="10" value="5" id="speedSlider" onchange="updateSpeed(this.value)">
   	</div>
 
   	<p>Please select your sorting algorithm:</p>
