--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   	<p>Please select your sorting algorithm:</p>
     <input type="radio" name="algorithm" value="merge" id="merge"> Merge Sort<br>
     <input type="radio" name="algorithm" value="quick" id="quick"> Quick Sort<br>
-    <input type="radio" name="algorithm" value="heap" id="heap"> Heap Sort<br> 
+    <input type="radio" name="algorithm" value="insertion" id="insertion"> Insertion Sort<br> 
     <input type="radio" name="algorithm" value="bubble" id="bubble"> Bubble Sort<br><br>
     <button onclick="chooseSort()">Sort</button>
     <br><br><br>
